--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ font-weight: 1000;
         <img id="f" src="pudharifeta.jpg" alt="">
     </div>
    <div>
-    <img id="fg" src="navvarifete.jpg" alt="">
+    <img id="fg" src="navvarifeta.jpg" alt="">
    </div>
  
    
