--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ font-weight: 1000;
         <img id="f" src="pudharifeta.jpg" alt="">
     </div>
    <div>
-    <img id="fg" src="navvarifeta.jpg" alt="">
+    <img id="fg" src="navvarifete.jpg" alt="">
    </div>
  
    
@@ -145,8 +145,8 @@ font-weight: 1000;
 <footer>
 
    <div id="l">
-    <h2>   पत्ता-वरला वाडा, रोकडेश्वर गल्ली,रहिमतपूर</h1>
-        <h1 id="g">मो.नं - 9075502347. <br><span></span>&nbsp &nbsp &nbsp &nbsp-  8483881405  .</h3>
+    <div>   पत्ता-वरला वाडा, रोकडेश्वर गल्ली,रहिमतपूर</div>
+        <div id="g">मो.नं - 9075502347. <br><span></span>&nbsp &nbsp &nbsp &nbsp-  8483881405  .</div>
    </div>
 
        
