--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ font-weight: 1000;
         border-radius: 20px;
         font-size: 40px;
         border: white 2px solid;
+          font-weight: 1000;
     }
     body{
         border: solid black 7px;
