--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ font-weight: 1000;
 <footer>
 
    <div id="l">
-    <div>   पत्ता-वरला वाडा, रोकडेश्वर गल्ली,रहिमतपूर</div>
+    <div>   पत्ता- रहिमतपूर</div>
 <DIV>आमच्या व्हॉट्सॲप ग्रुप ला जॉईन होण्यासाठी 9834926132 या व्हॉट्सॲप नं वर "ADD" हा मेसेज पाठवा</DIV>
         <div id="g">मो.नं - 9834926132. <br><span></span>&nbsp &nbsp &nbsp &nbsp-  8483881405  .</div>
    </div>
