--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ font-weight: 1000;
         justify-content: center;
         text-align: center;
     }
-    #l{
+    #l{font-weight: 1000;
+        font-size: 50PX;
         text-align: center;
         justify-content: center;
         border: rgb(109, 0, 0) 2px solid;
