--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ font-weight: 1000;
         border-radius: 40px;
     }
     #g{
-        background-color: black;
-        color: #ffffff;
+       
+        color: #000000;
         border-radius: 20px;
         font-size: 40px;
         border: white 2px solid;
@@ -100,7 +100,7 @@ font-weight: 1000;
     }
 #fgh{
     background-color: azure;
-    font-size: 25px;
+    font-size: 29px;
     font-weight: 800;
     border: 3px solid black; 
     padding: 10px;
