--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ font-weight: 900;
 <img id="MESS" src="messadd.jpg" alt="">
     आमच्या इतर सेवा - सह्याद्री मेस 
     <br>
-    आमच्याकडे ऑर्डर प्रमाणे घरगुती पद्धतीने बनवलेले डबे व घरगुती कार्यक्रमासाठी जेवण बनवून मिळेल तसेच खारीक खोबरे बारीक करून मिळेल.(खारीक खोबरे उन्हात वाळवून आणावे)
+    आमच्याकडे ऑर्डर प्रमाणे घरगुती पद्धतीने बनवलेले डबे व घरगुती कार्यक्रमासाठी जेवण बनवून मिळेल तसेच खारीक खोबरे बारीक करून मिळेल.(खारीक खोबरे ओलसर असल्यास उन्हात वाळवून आणावे)
     
 </div>
 <footer>
