--- a/index.html
+++ b/index.html
@@ -5,7 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <style>
-       #address{
+        #a{
+        background-color: rgb(255, 255, 255);
+        justify-content: center;
+        text-align: center;
+        font-size: 140px;
+        border-radius: 60px;
+        border: black 3px solid;
+        font-weight: 1000;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    }
+
+    #e{
+    border-radius: 100PX;
+    display: flex;
+    justify-content: center;
+height: 650PX;
+width: fit-content;
+
+padding: 30px;
+}
+#e>img{
+    border-radius: 100PX;
+    display: flex;
+    justify-content: center;
+margin-right: 15px;
+
+}
+#b{
+    font-size: 90px;
+    font-weight: 900;
+    border: 2px solid black;
+    padding: 4px;
+    text-align: center;
+}
+
+#messaddv{
+    border: black 2px solid;
+    border-radius: 10px;
+display: flex;
+    padding: 5PX;
+    font-size: 65px;
+    font-weight: 900;
+    text-align: center;
+}
+    #address{
+    font-weight: 900;
+   font-size: 90px;
+}
+
+#l{
+        justify-content: center;
+        text-align: center;
+    }
+    #g{
+        background-color: black;
+        color: #ffffff;
+        border-radius: 20px;
+        font-size: 90px;
+        border: white 2px solid;
+    }
+    body{
+        border: 4px solid black;
+        padding: 4px;
+    }
+    #MESS{
+        height: 600PX;
+    }
+       /* #address{
     font-weight: 900;
    font-size: 30px;
 }
@@ -62,7 +130,7 @@ font-weight: 1000;
         padding-top: 50px;
     }
     #e{
-        width: 100%;
+    
         display: flex;
         justify-content: center;
     height: 350PX;
@@ -74,8 +142,8 @@ font-weight: 1000;
 #f,#fg{
     border: black 2px solid;
     border-radius: 30px;
-    width: 100%;
-    height: 100%;
+    width:500PX;
+    height: 500PX;
     padding: 3PX;
 }
 
@@ -118,38 +186,39 @@ font-weight: 900;
     align-items: center;
    padding: 3PX;
 
-}
+} */
 
 
 </style>
 </head>
 
 <body>
-    <div id="all">
-<div id="v">
-    <div id="a">सह्याद्री फेटेवाले</div>
 
-</div>
+
+    <div id="a">सह्याद्री फेटा</div>
+
 
 <main id="e">
 
-    <div>
+
         <img id="f" src="pudharifeta.jpg" alt="">
-    </div>
-   <div>
+
+
     <img id="fg" src="navvarifeta.jpg" alt="">
-   </div>
+
  
    
 </main>
 
-<div id="b">शाळा-कॉलेज मधील सांस्कृतिक कार्यक्रम ,फोटो स्टुडिओ आणि लग्न समारंभ मध्ये फेटे बांधुन मिळतील.</div>
+<div id="b">शाळा-कॉलेज मधील सांस्कृतिक कार्यक्रम ,फोटो स्टुडिओ आणि लग्न समारंभ मध्ये फेटे बांधुन मिळतील.
 
-<div id="fgh">
+</div>
+
+<div id="messaddv">
 <img id="MESS" src="messadd.jpg" alt="">
     आमच्या इतर सेवा - सह्याद्री मेस 
     <br>
-    आमच्याकडे ऑर्डर प्रमाणे घरगुती पद्धतीने बनवलेले डबे व घरगुती कार्यक्रमासाठी जेवण बनवून मिळेल तसेच खारीक खोबरे बारीक करून मिळेल.(खारीक खोबरे ओलसर असल्यास उन्हात वाळवून आणावे)
+    आमच्याकडे ऑर्डर प्रमाणे घरगुती पद्धतीने बनवलेले डबे / जेवण बनवून मिळेल तसेच खारीक खोबरे बारीक करून मिळेल.(खारीक खोबरे ओलसर असल्यास उन्हात वाळवून आणावे)
     
 </div>
 <footer>
@@ -162,8 +231,8 @@ font-weight: 900;
 
 
  
-</div>
+
 </footer>
-    </div>
+
 </body>
 </html>
